Calculate percentaje of variables and add to table

--- a/notebooks/01-general-data-description.ipynb
+++ b/notebooks/01-general-data-description.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -69,6 +69,58 @@
    "outputs": [],
    "source": [
     "data_raw = pd.read_csv(\"../data/raw/cervezaDS.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0 = 0.0\n",
+      "index = 0.0\n",
+      "nhbhgv = 0.0\n",
+      "OG = 3.489211717505404\n",
+      "PrimingAmount = 81.28534228708881\n",
+      "PrimingMethod = 79.06788878208167\n",
+      "Efficiency = 3.5982002229412906\n",
+      "SugarScale = 3.539305813171588\n",
+      "StyleID = 3.514710063497651\n",
+      "PitchRate = 47.67761967298935\n",
+      "Unnamed: 23 = 86.66323680065709\n",
+      "Size(L) = 3.465292915070199\n",
+      "UserId = 60.3419486151916\n",
+      "BoilGravity = 7.02355325092629\n",
+      "BoilTime = 3.5481061272751067\n",
+      "ugtft = 86.66323680065709\n",
+      "BoilSize = 3.5460752855589104\n",
+      "FG = 3.5469778818772197\n",
+      "PrimaryTemp = 28.95980287296408\n",
+      "Style = 4.115613562412279\n",
+      "Color = 3.5596142303335543\n",
+      "Name = 3.5282490082722955\n",
+      "Unnamed: 22 = 86.65646732826977\n",
+      "IBU = 3.51832044877089\n",
+      "BrewMethod = 3.4749958254920275\n",
+      "BeerID = 3.4621338279561162\n",
+      "ABV = 3.525992517476521\n",
+      "MashThickness = 37.22555430696398\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column_variables in data_raw:\n",
+    "    print(f'{column_variables} = {(data_raw[column_variables].isnull().sum()/len(data_raw))*100}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate the percentaje of the variables with tha data missing"
    ]
   },
   {
@@ -84,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset original is modified by the theacher, but for the exercise"
+    "The original dataset is modified by the theacher, but for the exercise compare the variables of the dataset with the datos_cerveza_Info file and exclude the columns that are not incluided"
    ]
   },
   {
@@ -93,33 +145,33 @@
    "source": [
     "|Feature Name| Type | Description and values | % Missing\n",
     "|--|--|--|--|\n",
-    "| BeerID | Number | The Record Id |  0\n",
-    "| Name | Categorical (nominal) | The beer name | ? \n",
-    "| StyleID | Number | The Numeric ID for type of brew | ? \n",
-    "| Size(L)| Number | Amount brewed for recipe listed | ? \n",
-    "| OG | Number | Specific gravity of wort before fermentation | ? \n",
-    "| FG | Number (nominal) | Specific gravity of wort after fermentation | ? \n",
-    "| ABV | Number | Alcohol By Volume | ? \n",
-    "| IBU | Number | International Bittering Units | ? \n",
-    "| Color | Number | Standard Reference Method - light to dark ex. 40 = black-  | ? \n",
-    "| BoilTime | Number | Time wort is boiled | ? \n",
-    "| BoilGravity | Number | Specific gravity of wort before the boil | ? \n",
-    "| Efficiency | Number | Beer mash extraction efficiency - extracting sugars from the grain during mash | ? \n",
-    "| MashThinckness | Number | Amount of water per pound of grain | ? \n",
-    "| SugarScale | Categorical (nominal) | Scale to determine the concentration of dissolved solids in wort | ? \n",
-    "| BrewMethod | Categorical (nominal) | Various techniques for brewing | ? \n",
-    "| PitchRate | Number | Yeast added to the fermentor per gravity unit - M cells/ml/deg P | ? \n",
-    "| PrimaryTemp | Number | Temperature at the fermenting stage | ? \n",
-    "| PrimingMethod | Categorical (nominal) | N | ? \n",
-    "| PrimingAmount | Categorical (nominal) | Amount of priming sugar used **(Analyzing tha dataset, the data type for this column contains number and categorical variables)** | ? \n",
-    "| UserId | Number | The beer name | ? \n",
-    "| Style| Categorical (nominal) | The type of brew | ? \n",
+    "| BeerID | Number | The Record Id |  3,46 %\n",
+    "| Name | Categorical (nominal) | The beer name | 3,52 % \n",
+    "| StyleID | Number | The Numeric ID for type of brew | 3,51 % \n",
+    "| Size(L)| Number | Amount brewed for recipe listed | 3,46 % \n",
+    "| OG | Number | Specific gravity of wort before fermentation | 3,49 % \n",
+    "| FG | Number (nominal) | Specific gravity of wort after fermentation | 3,55 % \n",
+    "| ABV | Number | Alcohol By Volume | 3,52 % \n",
+    "| IBU | Number | International Bittering Units | 3,52 % \n",
+    "| Color | Number | Standard Reference Method - light to dark ex. 40 = black-  | 3,56 % \n",
+    "| BoilTime | Number | Time wort is boiled | 3,55% \n",
+    "| BoilGravity | Number | Specific gravity of wort before the boil | 7 % \n",
+    "| Efficiency | Number | Beer mash extraction efficiency - extracting sugars from the grain during mash | 3,6 % \n",
+    "| MashThinckness | Number | Amount of water per pound of grain | 37,22 % \n",
+    "| SugarScale | Categorical (nominal) | Scale to determine the concentration of dissolved solids in wort | 3,54% \n",
+    "| BrewMethod | Categorical (nominal) | Various techniques for brewing | 3,47 % \n",
+    "| PitchRate | Number | Yeast added to the fermentor per gravity unit - M cells/ml/deg P | 47,68 % \n",
+    "| PrimaryTemp | Number | Temperature at the fermenting stage | 28,96 % \n",
+    "| PrimingMethod | Categorical (nominal) | N | 79,1 % \n",
+    "| PrimingAmount | Categorical (nominal) | Amount of priming sugar used **(Analyzing tha dataset, the data type for this column contains number and categorical variables)** | 81,28 % \n",
+    "| UserId | Number | The beer name | 60,34 % \n",
+    "| Style| Categorical (nominal) | The type of brew | 4,11 % \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +231,7 @@
        "22"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,10 +271,274 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ABV',\n",
+       " 'BeerID',\n",
+       " 'Boil',\n",
+       " 'BoilGravity',\n",
+       " 'BoilTime',\n",
+       " 'BrewMethod',\n",
+       " 'Color',\n",
+       " 'Efficiency',\n",
+       " 'FG',\n",
+       " 'IBU',\n",
+       " 'MashThickness',\n",
+       " 'Name',\n",
+       " 'OG',\n",
+       " 'PitchRate',\n",
+       " 'PrimaryTemp',\n",
+       " 'PrimingAmount',\n",
+       " 'PrimingMethod',\n",
+       " 'Size(L)',\n",
+       " 'Style',\n",
+       " 'StyleID',\n",
+       " 'SugarScale',\n",
+       " 'UserId'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>nhbhgv</th>\n",
+       "      <th>OG</th>\n",
+       "      <th>PrimingAmount</th>\n",
+       "      <th>PrimingMethod</th>\n",
+       "      <th>Efficiency</th>\n",
+       "      <th>SugarScale</th>\n",
+       "      <th>StyleID</th>\n",
+       "      <th>PitchRate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PrimaryTemp</th>\n",
+       "      <th>Style</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Unnamed: 22</th>\n",
+       "      <th>IBU</th>\n",
+       "      <th>BrewMethod</th>\n",
+       "      <th>BeerID</th>\n",
+       "      <th>ABV</th>\n",
+       "      <th>MashThickness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>23250</td>\n",
+       "      <td>9156615</td>\n",
+       "      <td>1076</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Co2</td>\n",
+       "      <td>-354128741541</td>\n",
+       "      <td>Specific Gravity</td>\n",
+       "      <td>56</td>\n",
+       "      <td>-354128741541</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Double IPA</td>\n",
+       "      <td>5.62</td>\n",
+       "      <td>Enjoy By Clone</td>\n",
+       "      <td>-354128741541</td>\n",
+       "      <td>88.4</td>\n",
+       "      <td>All Grain</td>\n",
+       "      <td>-354128741541.0</td>\n",
+       "      <td>8.14</td>\n",
+       "      <td>1.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>41758</td>\n",
+       "      <td>9156615</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-354128741541</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>-354128741541</td>\n",
+       "      <td>27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Berliner Weisse</td>\n",
+       "      <td>-354128741541</td>\n",
+       "      <td>Farmhouse Collaboration with Andrew</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.39</td>\n",
+       "      <td>BIAB</td>\n",
+       "      <td>41759.0</td>\n",
+       "      <td>5.41</td>\n",
+       "      <td>-354128741541.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>42392</td>\n",
+       "      <td>9156615</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>-354128741541</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-354128741541.0</td>\n",
+       "      <td>American Pale Ale</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>17-Nov</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41.35</td>\n",
+       "      <td>BIAB</td>\n",
+       "      <td>42393.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>33602</td>\n",
+       "      <td>9156615</td>\n",
+       "      <td>856842215413</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>Specific Gravity</td>\n",
+       "      <td>856842215413</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>English IPA</td>\n",
+       "      <td>856842215413</td>\n",
+       "      <td>Citra/Flyer</td>\n",
+       "      <td>856842215413</td>\n",
+       "      <td>51.37</td>\n",
+       "      <td>856842215413</td>\n",
+       "      <td>33603.0</td>\n",
+       "      <td>5.21</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>49734</td>\n",
+       "      <td>9156615</td>\n",
+       "      <td>1052.0</td>\n",
+       "      <td>112 g</td>\n",
+       "      <td>Dextrose</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>Specific Gravity</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>English Porter</td>\n",
+       "      <td>????</td>\n",
+       "      <td>One in the Stink</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>????</td>\n",
+       "      <td>????</td>\n",
+       "      <td>49735.0</td>\n",
+       "      <td>4.88</td>\n",
+       "      <td>2.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  index   nhbhgv            OG PrimingAmount  PrimingMethod  \\\n",
+       "0           0  23250  9156615          1076           NaN            Co2   \n",
+       "1           1  41758  9156615          1.05           NaN  -354128741541   \n",
+       "2           2  42392  9156615        1056.0           NaN            NaN   \n",
+       "3           3  33602  9156615  856842215413           NaN            NaN   \n",
+       "4           4  49734  9156615        1052.0         112 g       Dextrose   \n",
+       "\n",
+       "      Efficiency        SugarScale       StyleID      PitchRate  ...  \\\n",
+       "0  -354128741541  Specific Gravity            56  -354128741541  ...   \n",
+       "1           70.0     -354128741541            27            NaN  ...   \n",
+       "2           60.0     -354128741541            10            NaN  ...   \n",
+       "3           75.0  Specific Gravity  856842215413            NaN  ...   \n",
+       "4           75.0  Specific Gravity            66           0.35  ...   \n",
+       "\n",
+       "       PrimaryTemp              Style          Color  \\\n",
+       "0             20.0         Double IPA           5.62   \n",
+       "1              NaN    Berliner Weisse  -354128741541   \n",
+       "2  -354128741541.0  American Pale Ale            6.7   \n",
+       "3              NaN        English IPA   856842215413   \n",
+       "4             21.0     English Porter           ????   \n",
+       "\n",
+       "                                  Name    Unnamed: 22    IBU    BrewMethod  \\\n",
+       "0                       Enjoy By Clone  -354128741541   88.4     All Grain   \n",
+       "1  Farmhouse Collaboration with Andrew            NaN   5.39          BIAB   \n",
+       "2                               17-Nov            NaN  41.35          BIAB   \n",
+       "3                          Citra/Flyer   856842215413  51.37  856842215413   \n",
+       "4                     One in the Stink            NaN   ????          ????   \n",
+       "\n",
+       "            BeerID   ABV    MashThickness  \n",
+       "0  -354128741541.0  8.14             1.45  \n",
+       "1          41759.0  5.41  -354128741541.0  \n",
+       "2          42393.0   6.1              NaN  \n",
+       "3          33603.0  5.21              3.0  \n",
+       "4          49735.0  4.88              2.6  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_raw.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some columns are not specified in the original dataset and the metadata, some of this are the next ones"
+    "The column \"Boil\" not exist in the dataset, but exist in the datos_cerveza_Info file and create some errors for the calculate percentage "
    ]
   },
   {
@@ -249,6 +565,13 @@
    ],
    "source": [
     "columns_not_in_info_set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some columns are not specified in the original dataset and the metadata, some of this are the next ones"
    ]
   },
   {
@@ -4623,7 +4946,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -4637,7 +4960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -4694,7 +5017,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "110fe3fb9777db4ce1f884af3cc527a40b2c98427ad17781c021ef692bd3d28d"
+    "hash": "3d0f526a75e70fa7259b5e36ab5fdbb650e38bac3f52c949b957a12e00162b0e"
    }
   }
  },
