--- a/notebooks/Plantilla_Trabajo_Final_Datos.ipynb
+++ b/notebooks/Plantilla_Trabajo_Final_Datos.ipynb
@@ -1089,7 +1089,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -1103,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.7"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -1160,7 +1160,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "447c0f0993c7e50bc10ddc9bd7e362220c6ef046a7e5a6eb2fbe70cad79928d7"
+    "hash": "3d0f526a75e70fa7259b5e36ab5fdbb650e38bac3f52c949b957a12e00162b0e"
    }
   }
  },
