--- a/notebooks/03-exploratory-analysis-jss.ipynb
+++ b/notebooks/03-exploratory-analysis-jss.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_keys = ['Efficiency', 'BoilTime', 'Color', 'BoilGravity']\n",
+    "numeric_keys = ['Efficiency', 'BoilTime', 'Color', 'BoilGravity', 'OG', 'Size(L)']\n",
     "categoric_keys = ['BrewMethod']"
    ]
   },
@@ -553,7 +553,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -567,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -624,7 +624,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "110fe3fb9777db4ce1f884af3cc527a40b2c98427ad17781c021ef692bd3d28d"
+    "hash": "3d0f526a75e70fa7259b5e36ab5fdbb650e38bac3f52c949b957a12e00162b0e"
    }
   }
  },
