Modified the problem in the general data description notebook

--- a/notebooks/01-general-data-description.ipynb
+++ b/notebooks/01-general-data-description.ipynb
@@ -12,6 +12,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on Beer recipes data recolected, there are several ways to make different beer styles, the next project allows to find characteristics across those recipes to try to identify which beer style will be by the input data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "0fWGXusiHJoO"
