Completed the univariate analysis

--- a/notebooks/Plantilla_Trabajo_Final_Datos.ipynb
+++ b/notebooks/Plantilla_Trabajo_Final_Datos.ipynb
@@ -1089,7 +1089,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit (microsoft store)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1103,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.2"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -1160,7 +1160,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "3d0f526a75e70fa7259b5e36ab5fdbb650e38bac3f52c949b957a12e00162b0e"
+    "hash": "5c6e8b7d5fc8ed5737cacc7e599928c7811d7782033340de08b8148e72c567d8"
    }
   }
  },
