Added the final classifier

--- a/notebooks/01-general-data-description.ipynb
+++ b/notebooks/01-general-data-description.ipynb
@@ -5082,8 +5082,7 @@
     }
    ],
    "source": [
-    "data_raw['SugarScale'].sample(12)\n",
-    "\n"
+    "data_raw['SugarScale'].sample(12)"
    ]
   },
   {
