Added a reference to overfitting issue

--- a/notebooks/05-machine-learning.ipynb
+++ b/notebooks/05-machine-learning.ipynb
@@ -832,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After cleaning we decided to do a cross validation test. "
+    "After cleaning we realize we had overfitting, it is possible to prevent this by doing coss-validation, as we see in  https://elitedatascience.com/overfitting-in-machine-learning, so we decided to do a cross validation test. "
    ]
   },
   {
@@ -984,7 +984,9 @@
     "\n",
     "- [Home_Brewed Beer code where we reused the resampling and modeling](https://www.kaggle.com/code/samch08/home-brewed-beer)\n",
     "\n",
-    "- [Data set](https://www.kaggle.com/datasets/jtrofe/beer-recipes)"
+    "- [Data set](https://www.kaggle.com/datasets/jtrofe/beer-recipes)\n",
+    "\n",
+    "- [Why we used cross-validation to prevent overfitting ](https://elitedatascience.com/overfitting-in-machine-learning)"
    ]
   }
  ],
